logstash-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: logstash-server
  name: logstash-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: logstash-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-logstash-behind-nginx-app-network: "true"
        io.kompose.service: logstash-server
    spec:
      containers:
        - image: logstash-server
          name: logstash-server
          ports:
            - containerPort: 5200
          resources: {}
      restartPolicy: Always
status: {}
