logstash-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: logstash-server
  name: logstash-server
spec:
  ports:
    - name: "5200"
      port: 5200
      targetPort: 5200
  selector:
    io.kompose.service: logstash-server
status:
  loadBalancer: {}
