docker-logstash-behind-nginx-app-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: docker-logstash-behind-nginx-app-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/docker-logstash-behind-nginx-app-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/docker-logstash-behind-nginx-app-network: "true"
